<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="23dp"
    android:focusable="false"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="50dp"
    tools:context=".LoginActivity"
    android:visibility="visible">

    <!-- Login progress -->
    <TextView
        android:id="@+id/title_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#fefafa"
        android:text="Remember"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="normal|bold"
        style="@style/Title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_below="@+id/title_login"
        android:layout_centerHorizontal="true" />
        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="* Неправильный логин или пароль"
                android:id="@+id/errorText"
                android:visibility="visible"
                android:textColor="#ce3e3e"
                android:textSize="15dp"
                android:layout_below="@+id/title_login"
                android:layout_centerHorizontal="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_login"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    style="@style/Field"
                    android:layout_marginBottom="5dp" />


                <EditText
                    style="@style/Field"
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:onClick="login"
                    android:text="@string/action_sign_in"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Вы еще не с нами?"
                    android:id="@+id/textView2"
                    android:textSize="15dp"
                    android:textColor="#ffffff" />

                <Button
                    style="@style/Widget.AppCompat.ActionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Регистрация"
                    android:id="@+id/button"
                    android:onClick="signupClick"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:textColor="#f0deba" />
            </LinearLayout>

        </LinearLayout>


</RelativeLayout>
